MOD 修改成模块按需加载的方式

--- a/.webpackrc
+++ b/.webpackrc
@@ -17,6 +17,7 @@
     "template": "./src/index.ejs"
   },
   "publicPath": "/",
-  "disableDynamicImport": true,
+ 
+  "disableDynamicImport": false,
   "hash": true
 }
